# CppTechnique

./: README.md
AccessControlList/: AccessList.cpp  AccessList.h  testAccessList.cpp
AuditVoterRolls/: AuditVoterRolls.cpp
Back_Insert_Iterator/: inserts.cpp
BankDB/: BankDB.cpp  BankDB.h  testBankDB.cpp
BitsetBasics/: BitsetBasics.cpp  BitwiseOperators.cpp
BuddyList/: BuddyList.cpp  BuddyList.h
C_ALIGN/: align.c
C_MACRO/: glue.c  macro_like_inline.c  variadic.c
CopyInsertionSort/: copyInsertionSort.h  insertionSort.h  testCopyInsertionSort.cpp  testInsertionSort.cpp
CopyIt/: copyIt.cpp
DoubleDispatch/: DoubleDispatch.cpp  DoubleDispatchBruteForce.cpp  DoubleDispatchPre.cpp
ErrorCorrelatorPqueue/: ErrorCorrelator.cpp  ErrorCorrelator.h  ErrorCorrelatorTestDriver.cpp
Function/: FunctionPointers.cpp  function_callback.cpp  function_count_if.cpp  functor.cpp
FunctionBind/: biggies.cpp  biggies2.cpp  sample0.cpp
GMock_Sample/Soundex/: CMakeLists.txt  Soundex.h  SoundexTest.cpp
Lambda/: lambda1.cpp  lambda14.cpp
Multithreading/: inc_func_atomic.cpp
Next_Permutation/: c_version.cpp  cpp_version.cpp
Noncopyable/: descriptor_owner_fixed.cpp
ObjectPool/: ObjectPool.h  UserRequest.h  testObjectPool.cpp
Observer/: Observable.h  ObservedFlower.cpp  Observer.h
PacketBuffer/: IPPacket.h  PacketBuffer.h  testPacketBuffer.cpp
PartInsertionSort/: partInsertionSort.h  testInsertionSort.cpp  testPartInsertionSort.cpp  tmpTestPartInsertionSort.cpp
PersonInfo/: PersonInfo.cpp  people.txt
PhoneBook/: PhoneBook.cpp
Pointer/: Pointer.h  (+1 more)
(+101 files in other folders)
